samples/_failures_safe/1761427407_59ef4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_195a2363.c: In function ‘main’:
./samples/SAFE/__tmp_195a2363.c:164:21: error: expected ‘)’ at end of input
  164 |     if (process_file
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_195a2363.c:164:5: error: expected declaration or statement at end of input
  164 |     if (process_file
      |     ^~
